# dotman.rs

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  release-notes.py
src/: main.rs
tests/: cli.rs  dotman_conf.toml  dotman_conf_link.toml
