[package]
name = "dotman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
clap = { version = "4.0", features = ["derive", "string"] }
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.18"
toml = "0.5.8"
serde = "1.0.136"
serde_derive = "1.0.136"
colored = "2.0.0"
home = "0.5.5"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"
